--- a/hmmer/templates/clades.html
+++ b/hmmer/templates/clades.html
@@ -11,25 +11,16 @@
 <div class="container">
 
             <div class="row">
-                <div class="col-sm-8">
-                    <h2><a href="{% url "dlClades" id %}">{{ title }}</a></h2>
+                <div class="col-xs-8">
+                    <h2>{{ title }}</h2>
                 </div>
 
-                <div class="col-sm-4">
-                    <!-- Split button -->
-                    <div class="btn-group pull-right">
-                        <button type="button" class="btn btn-primary">Downloads</button>
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                            <span class="caret"></span>
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
+                <div class="col-xs-4">
+                    <div class="pull-right">
+                        <a href="{% url "dlClades" id %}" class="download btn btn-primary">
+                            <span class="glyphicon glyphicon-download"></span>
+                            Download
+                        </a>
                     </div>
                 </div>
             </div>
@@ -84,55 +75,55 @@
             </div>
             {% endfor %}
 
-</div>
+        </div>
 
-<!--[> Modal <]-->
-<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
-    <!--<div class="modal-dialog">-->
-        <!--<div class="modal-content">-->
-            <!--<div class="modal-header">-->
-                <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
-                <!--<h4 class="modal-title">Modal title</h4>-->
-                <!--</div>-->
-            <!--<div class="modal-body">-->
-                <!--...-->
-                <!--<div id="chart_div_1" style="width:400px; height: 300px;"></div>-->
-                <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-                <!--</div>-->
-            <!--</div>[> /.modal-content <]-->
-        <!--</div>[> /.modal-dialog <]-->
-    <!--</div>[> /.modal <]-->
-
-
-
-<!--<script type="text/javascript">-->
-    <!--$('.thumbnail').click(function() {-->
-            <!--$('.modal-body').empty();-->
-            <!--var title = $(this).parent('a').attr("title");-->
-            <!--$('.modal-title').html(title);-->
-            <!--$($(this).parents('div').html()).appendTo('.modal-body');-->
-            <!--$('#myModal').modal({show:true});-->
-            <!--});-->
-    <!--</script>-->
+        <!--[> Modal <]-->
+        <!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
+            <!--<div class="modal-dialog">-->
+                <!--<div class="modal-content">-->
+                    <!--<div class="modal-header">-->
+                        <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
+                        <!--<h4 class="modal-title">Modal title</h4>-->
+                        <!--</div>-->
+                    <!--<div class="modal-body">-->
+                        <!--...-->
+                        <!--<div id="chart_div_1" style="width:400px; height: 300px;"></div>-->
+                        <!--</div>-->
+                    <!--<div class="modal-footer">-->
+                        <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                        <!--</div>-->
+                    <!--</div>[> /.modal-content <]-->
+                <!--</div>[> /.modal-dialog <]-->
+            <!--</div>[> /.modal <]-->
 
 
-<script type="text/javascript">
 
-    // Load the Visualization API and the piechart package.
-google.load('visualization', '1.0', {'packages':['corechart'],"callback":drawCharts});
+        <!--<script type="text/javascript">-->
+            <!--$('.thumbnail').click(function() {-->
+                    <!--$('.modal-body').empty();-->
+                    <!--var title = $(this).parent('a').attr("title");-->
+                    <!--$('.modal-title').html(title);-->
+                    <!--$($(this).parents('div').html()).appendTo('.modal-body');-->
+                    <!--$('#myModal').modal({show:true});-->
+                    <!--});-->
+            <!--</script>-->
 
-// Set a callback to run when the Google Visualization API is loaded.
-//google.setOnLoadCallback(drawCharts);
 
-function drawCharts() {
-    {% for row in detailed_counts %}
-    drawChart_{{ forloop.counter }}();
-    {% endfor %}
+        <script type="text/javascript">
 
-}
+            // Load the Visualization API and the piechart package.
+        google.load('visualization', '1.0', {'packages':['corechart'],"callback":drawCharts});
+
+        // Set a callback to run when the Google Visualization API is loaded.
+        //google.setOnLoadCallback(drawCharts);
+
+        function drawCharts() {
+            {% for row in detailed_counts %}
+            drawChart_{{ forloop.counter }}();
+            {% endfor %}
+
+        }
 
 {% for row in detailed_counts %}
 function drawChart_{{ forloop.counter }}() {
