--- a/hmmer/templates/tree.html
+++ b/hmmer/templates/tree.html
@@ -12,37 +12,24 @@
     <div class="row">
         <div class="col-md-3">
 
-                <a href="#" class="thumbnail">
-                    <img src="{{ STATIC_URL }}/img/{{ id }}/placementInfo/{{ file }}/placed_clade_{{ file }}.png" alt="nwick tree" width="100%"/>
-                </a>
+            <a href="#" class="thumbnail">
+                <img src="{{ STATIC_URL }}/img/{{ id }}/placementInfo/{{ file }}/placed_clade_{{ file }}.png" alt="nwick tree" width="100%"/>
+            </a>
 
-                    <div class="caption">
-                        <h3>newick.png</h3>
-                    </div>
+            <div class="caption">
+                <h3>newick.png</h3>
+            </div>
+
         </div>
         <div class="col-md-9">
 
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-xs-6">
                     <h2><a href="#">Trees-{{ file }}</a></h2>
                 </div>
 
-                <div class="col-sm-4">
-                    <!-- Split button -->
-                    <div class="btn-group pull-right">
-                        <button type="button" class="btn btn-primary">Downloads</button>
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                            <span class="caret"></span>
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </div>
+                <div class="col-xs-6">
+                    <!--Download Button Goes Here -->
                 </div>
             </div>
 
@@ -51,27 +38,27 @@
             <div>
                 {% if counts %} 
                 <div class="table-responsive">
-                <table class="table-bordered table-condensed table-striped cf"> 
-                    <thead>
-                        <tr class="{% cycle '' 'altrow' as alt %}">
-                            {% for header in  headers %}
-                            <th>{{ header }}</th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for row in counts %}
-                        <tr class="{% cycle alt  %}">
-                            {% for header in headers %}
-                            <td> {{ row| dictvalue:header }}  </td>
-                            {% endfor %}
+                    <table class="table-bordered table-condensed table-striped cf"> 
+                        <thead>
+                            <tr class="{% cycle '' 'altrow' as alt %}">
+                                {% for header in  headers %}
+                                <th>{{ header }}</th>
+                                {% endfor %}
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for row in counts %}
+                            <tr class="{% cycle alt  %}">
+                                {% for header in headers %}
+                                <td> {{ row| dictvalue:header }}  </td>
+                                {% endfor %}
 
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            {% if is_paginated %}{% pagination counts %}{% endif %}
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% if is_paginated %}{% pagination counts %}{% endif %}
                 {% else %}
                 <div class="col-sm-4 col-sm-offset-4">
                     <h1>No Data Available</h1>
