--- a/hmmer/templates/upload.html
+++ b/hmmer/templates/upload.html
@@ -9,13 +9,15 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <div class="well">
-                <div class="col-md-12">
+            <div class="well"> <div class="col-md-12">
                     <form role="form" enctype="multipart/form-data" method="post" action=".">
 
                         <div class="form-group{% if form.fasta_File.errors %} has-error{% endif %}">
                             <label for="id_fasta_File">Fasta File </label>
-                            <!--<span class="glyphicon glyphicon-info-sign pull-right"></span>-->
+                            <!--<a class="info" href="#" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." data-placement="right" data-toggle="popover" data-trigger="hover">-->
+                            <span class="info glyphicon glyphicon-info-sign pull-right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." data-placement="top" data-toggle="popover" data-trigger="hover"></span>
+                            <!--</a>-->
+
 
                             <!--<div class="input-group">-->
                                 <!--<span class="input-group-btn">-->
@@ -42,7 +44,7 @@
 
                         <div class="form-group{% if form.sample_File.errors %} has-error{% endif %}">
                             <label for="id_sample_File">Id File </label>
-                            <!--<span class="glyphicon glyphicon-info-sign"></span>-->
+                            <span class="info glyphicon glyphicon-info-sign pull-right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." data-placement="top" data-toggle="popover" data-trigger="hover"></span>
 
                             <!--<div class="input-group">-->
                                 <!--<span class="input-group-btn">-->
@@ -91,27 +93,15 @@
 
         <div class="col-md-8">
             <div class="well">
-                <h2>Under Construction</h2>
-                <p>
-                usage: symTyper.py [-h] [-v] [-t THREADS] {clade,subtype,resolveMultipleHits,builPlacementTree,stats} ...
+                <h2>Lorem Ipsum</h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ligula augue. In sed nunc non dui congue hendrerit. Proin quis ligula ornare massa sollicitudin mattis. In quis arcu vitae nisi consectetur interdum. Curabitur sodales massa at arcu vulputate interdum tempor eu massa. Morbi eget lorem ipsum. Aliquam egestas rhoncus venenatis.</p>
 
-                </p>
-                <p>
-                symTyper Description
+                <p>Nam in diam purus. Vestibulum scelerisque leo at quam varius posuere. Donec vestibulum sem nec lectus dapibus gravida. Ut posuere, erat aliquet dapibus pellentesque, velit dui malesuada purus, at mattis turpis tellus a augue. Fusce sed molestie purus. Phasellus gravida ligula eu gravida molestie. Vestibulum sit amet odio commodo ipsum congue dapibus. Vestibulum tempus arcu eget mi posuere vehicula. Nullam quis placerat tellus, at luctus mauris. Sed id erat non arcu pellentesque dignissim. Vivamus et lobortis risus. Integer aliquam sapien erat, eget malesuada quam auctor non. Cras fringilla quam ligula, at malesuada erat fringilla eu. Cras ullamcorper vestibulum elit id mollis. Proin elementum risus et mauris convallis, vitae dapibus est cursus. Quisque rhoncus tristique interdum.</p>
 
-                </p>
-                <p>
-                positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
-                </p>
-
-                <p>
-                positional arguments: {clade,subtype,resolveMultipleHits,builPlacementTree,stats} Available commands
-                optional arguments: -h, --help show this help message and exit -v, --version show program's version number and exit -t THREADS, --threads THREADS
-                </p>
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="input-group">
-                            <input type="text" placeholder="http://hmmer/112.1382325231.99/" class="form-control">
+                            <input type="text" placeholder="112.1382325231.99" class="form-control">
                             <span class="input-group-btn">
                                 <button class="btn btn-primary" type="button">Go!</button>
                             </span>
@@ -123,6 +113,11 @@
 
     </div>
 </div>
+
+<script type="text/javascript">
+    $('.info').popover()
+</script>
+
 
 <!--<script type="text/javascript">-->
     <!--$(document)-->
