--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,11 @@ h1, h2, h3 {
 
 .header {
     background: url('../img/BI_Reef.jpg');
+    /*background: url('../img/Symtyper_Logo.ai');*/
     background-size: cover;
     background-position: center;
     opacity: 0.5;
-    height: 200px;
+    height: 150px;
 }
 
 .navbar {
@@ -22,7 +23,7 @@ h1, h2, h3 {
     font-size: 15px;
 }
 
-.btn-group {
+.download {
     margin-bottom: 10px;
     margin-top: 10px;
 }
